---------------------------------- 2023-11-29 21:16:08 23.11.29
qc pass: bridged ethernet over tmux
qc pass: bridged ethernet over l2tp3
qc pass: macsec over tmux
qc pass: macsec over l2tp3
qc pass: sgt tmux encapsulation
qc pass: sgt l2tp3 encapsulation
---------------------------------- 2023-11-30 23:11:31 23.11.30
no todo: generalise server access- knobs
---------------------------------- 2023-12-01 21:57:44 23.12.1
no todo: server http to have api for scripts
---------------------------------- 2023-12-03 02:17:13 23.12.3
qc pass: sdwan with l2tp2 and icmp
qc pass: sdwan with l2tp2 and tmux
---------------------------------- 2023-12-03 12:55:50 23.12.3
no todo: flowspec-divert knob to bgp, but think this twice at least and mark as experimental
qc pass: qos ingress divert action
qc pass: qos dapp divert action
---------------------------------- 2023-12-03 14:05:20 23.12.3
no qc pass: qos dapp divert action
qc pass: qos divert dapp
qc pass: qos divert flowspec
qc pass: qos divert otherflowspec
---------------------------------- 2023-12-03 17:49:20 23.12.3
qc pass: p4lang: sdwan over ipv4 with tmux
qc pass: p4lang: sdwan over ipv6 with tmux
---------------------------------- 2023-12-03 21:53:57 23.12.3
no todo: server http have some local logging finally
no todo: server forwarder to have some local logging finally
no todo: settle a new slide project misc slash thumbs as a small helper for misc slash album
no todo: it would not harm a lot to apply to the fillables like the check asdf
no todo: asdf#show cdp neigh | hinclude sdn  is fine but once the encUtf6/7 is there
no todo: sendtrhrough mode in p4lang to the dataplanes when crypto turned on like wg ovpn and ipsec if possible
no todo: mist natives to have ipcomp rfc somehow dissect this: packages.debian.org/sid/gzip so libc and deflate to link to
no todo: mpls as ipv8 as december project to the guessEthtype and maybe to the dataplanes (dont think so)
no todo: honeypot to wireformat, decode