@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.5-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-05 10:12:38, took 00:12:03, with 80 workers, on 3400 cases, 0 failed, 0 traces, 11 retries
+-;-;-;2023-12-05 12:02:54, took 00:15:29, with 80 workers, on 3400 cases, 0 failed, 0 traces, 8 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
