@@ -3406,7 +3406,6 @@ todo: consider draft-ietf-idr-performance-routing
 todo: ioam as rfc9452
 todo: flash ext-delete also to commander
 todo: commander to get away the cursor
-todo: player queue up down add-again
 todo: openflow to have 2 label support and stack to p4lang
 todo: bridge and router have renumber knob
 todo: misc natives p4fwd to have more tests 4 packetout message with macsec/wg/ipsec/ovpn/etc too...
