@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.5-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-05 10:12:38, took 00:12:03, with 80 workers, on 3400 cases, 0 failed, 0 traces, 11 retries<br/>
+tested: 2023-12-05 12:02:54, took 00:15:29, with 80 workers, on 3400 cases, 0 failed, 0 traces, 8 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
