@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.5-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-05 10:23:52, took 00:10:56, with 60 workers, on 528 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2023-12-05 12:14:01, took 00:10:51, with 60 workers, on 528 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
