@@ -15648,3 +15648,5 @@ no todo: sendtrhrough mode in p4lang to the dataplanes when crypto turned on lik
 no todo: mist natives to have ipcomp rfc somehow dissect this: packages.debian.org/sid/gzip so libc and deflate to link to
 no todo: mpls as ipv8 as december project to the guessEthtype and maybe to the dataplanes (dont think so)
 no todo: honeypot to wireformat, decode
+---------------------------------- 2023-12-05 11:47:25 23.12.5
+no todo: player queue up down add-again
